Customer and JWT services has been created and connecting with DB using ADO.NET

--- a/asp.net5.api.jwt.auth/appsettings.json
+++ b/asp.net5.api.jwt.auth/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "AppSettings": {
+    "SecretKey": "Welcome to asp.net5.api.jwt.auth server side application",
+    "Issuer": "http://localhost:60958/",
+    "ConnectionString": "***Add db connection string***"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
