--- a/asp.net5.api.jwt.auth/appsettings.json
+++ b/asp.net5.api.jwt.auth/appsettings.json
@@ -2,6 +2,7 @@
   "AppSettings": {
     "SecretKey": "Welcome to asp.net5.api.jwt.auth server side application",
     "Issuer": "http://localhost:60958/",
+    "ExpireTime": 5,
     "ConnectionString": "***Add db connection string***"
   },
   "Logging": {
