dapper added to connect with DB

--- a/asp.net5.api.jwt.auth/appsettings.json
+++ b/asp.net5.api.jwt.auth/appsettings.json
@@ -3,7 +3,7 @@
     "SecretKey": "Welcome to asp.net5.api.jwt.auth server side application",
     "Issuer": "http://localhost:60958/",
     "ExpireTime": 5,
-    "ConnectionString": "***Add db connection string***"
+    "ConnectionString": //"***Add db connection string***"
   },
   "Logging": {
     "LogLevel": {
